Project

General

Profile

Actions

Bug #16489

closed

rbd-mirror: potential race condition when restarting image replayer

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"ImageReplayer::handle_shut_down" advances the state machine before closing the local and remote IoCtxs. If "Replayer" detects that the "ImageReplayer" isn't running, it will restart it and potentially concurrently race with "ImageReplayer::start" re-creating the IoCtxs.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16512: jewel: rbd-mirror: potential race condition when restarting image replayerResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16512: jewel: rbd-mirror: potential race condition when restarting image replayer added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF